| Bug #10241 | cygwin port: invalid pragma interface directives | ||
|---|---|---|---|
| Submitted: | 28 Apr 2005 22:01 | Modified: | 19 May 2005 3:46 |
| Reporter: | STyx | ||
| Status: | Closed | ||
| Category: | Server: Compiling | Severity: | S3 (Non-critical) |
| Version: | OS: | cygwin | |
| Assigned to: | Magnus Svensson | Target Version: | |
[28 Apr 2005 22:01]
STyx
[30 Apr 2005 1:35]
STyx
bk commit into 4.1 tree (Sylvain:1.2215) bk push fails
[3 May 2005 13:52]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/24534
[4 May 2005 18:59]
Magnus Svensson
A new patch has been comitted http://lists.mysql.com/internals/24558
[10 May 2005 18:12]
Magnus Svensson
Pushed to 4.1.13 and 5.0.6
[19 May 2005 3:46]
Paul DuBois
Noted in 4.1.13, 5.0.6 changelogs.
