sql/ha_ndbcluster.h
@@ -21,7 +21,7 @@
 
 /* The class defining a handle to an NDB Cluster table */
 
-#ifdef __GNUC__
+#ifdef USE_PRAGMA_INTERFACE
 #pragma interface                       /* gcc class implementation */
 #endif
 
