sql/item_cmpfunc.h
@@ -17,7 +17,7 @@
 
 /* compare and test functions */
 
-#ifdef __GNUC__
+#ifdef USE_PRAGMA_INTERFACE
 #pragma interface			/* gcc class implementation */
 #endif
 
