sql/item_subselect.h
@@ -16,7 +16,7 @@
 
 /* subselect Item */
 
-#ifdef __GNUC__
+#ifdef USE_PRAGMA_INTERFACE
 #pragma interface			/* gcc class implementation */
 #endif
 
