sql/set_var.h
@@ -16,7 +16,7 @@
 
 /* Classes to support the SET command */
 
-#ifdef __GNUC__
+#ifdef USE_PRAGMA_INTERFACE
 #pragma interface			/* gcc class implementation */
 #endif
 
