sql/sql_select.h
@@ -17,7 +17,7 @@
 
 /* classes to use when handling where clause */
 
-#ifdef __GNUC__
+#ifdef USE_PRAGMA_INTERFACE
 #pragma interface			/* gcc class implementation */
 #endif
 
